--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -160,7 +160,8 @@ html, body, .landing-content, .search-panel {
 }
 
 .search-box button {
-  background-color: @gray-medium;
+  background-color: @gray;
+  padding-top: 5px;
 }
 
 .search-header {
@@ -179,6 +180,10 @@ html, body, .landing-content, .search-panel {
 
 .reg-list {
   border-top: none;
+}
+
+.content-primary {
+  width: 100%;
 }
 
 // TOC
