--- a/fec_eregs/templates/regulations/chrome.html
+++ b/fec_eregs/templates/regulations/chrome.html
@@ -1,32 +1,12 @@
 {% overextends "regulations/chrome.html" %}
 {% load static from staticfiles %}
 
-{% block sub-head-drawer-icons %}
-{% endblock %}
 
-{% block sub-head-content %}
-<div class="page-header">
-  <ul class="breadcrumbs">
-    <li class="breadcrumbs__item">
-      <a class="breadcrumbs__link" href="{{ FEC_CMS_URL }}/">Home</a>
-    </li>
-    <li class="breadcrumbs__item">
-      <span class="breadcrumbs__separator">&gt;</span>
-      <a class="breadcrumbs__link" href="{{ FEC_CMS_URL }}/legal-resources/">Legal resources</a>
-    </li>
-    <li class="breadcrumbs__item">
-      <span class="breadcrumbs__separator">&gt;</span>
-      <a class="breadcrumbs__link" href="{{ FEC_CMS_URL }}/legal/regulations/">Regulations</a>
-    </li>
-    <li id="content-header" class="breadcrumbs__item breadcrumbs__item--current">
-      <span class="breadcrumbs__separator">&gt;</span>
-      {% block wayfinding %}
-      {{ block.super }}
-      {% endblock %}
-    </li>
-  </ul>
-</div>
-{% endblock %}
+{% comment %}
+Empty the sub-head, we use the breadcrumbs in main-header.html
+{% endcomment %}
+{% block sub-head-drawer-icons %}{% endblock %}
+{% block sub-head-content %}{% endblock %}
 
 {% block drawer-toc %}
 <a href="#content-wrapper" class="hidden-text">Skip to main content</a> <!-- skip to content link for screen readers-->
