Remove transition on panel toggle

--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -126,11 +126,12 @@ a {
   background-color: @toc-background;
   border-bottom: none;
   border-right: none;
-  position: fixed;
-  width: auto;
-  left: 188px;
-  top: @mainhead_height + @subhead_height;
   height: auto;
+  left: 188px;
+  position: fixed;
+  top: @mainhead_height + @subhead_height;
+  transition: none;
+  width: auto;
   z-index: 1;
 
   a.current,
