Fix link to regulations landing page

--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -53,7 +53,7 @@
       </li>
       <li class="breadcrumbs__item">
         <span class="breadcrumbs__separator">&gt;</span>
-        <a class="breadcrumbs__link" href="{{ FEC_CMS_URL }}/legal/regulations/">Regulations</a>
+        <a class="breadcrumbs__link" href="{{ FEC_CMS_URL }}/regulations/">Regulations</a>
       </li>
       {% if reg_part %}
       <li id="content-header" class="breadcrumbs__item breadcrumbs__item--current">
