--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -37,6 +37,8 @@
  */
 .reg-header {
   font-family: @serif;
+  top: 0px;
+  left: 0px;
 }
 
 .version-search {
@@ -151,17 +153,7 @@ html, body, .landing-content, .search-panel {
 }
 
 .search-panel {
-  background-color: @toc-background;
-}
-
-.search-box input[type="text"] {
-  float: left;
-  border-radius: 0px;
-}
-
-.search-box button {
-  background-color: @gray;
-  padding-top: 5px;
+   background-color: @toc-background;
 }
 
 .search-header {
