--- a/fec_eregs/templates/regulations/base.html
+++ b/fec_eregs/templates/regulations/base.html
@@ -8,6 +8,7 @@ window.API_VERSION = "{{ FEC_API_VERSION }}";
 window.API_KEY = "{{ FEC_API_KEY }}";
 window.API_LOCATION = "{{ FEC_API_URL }}";
 window.CMS_URL = "{{ FEC_CMS_URL }}";
+window.WEB_URL = "{{ FEC_WEB_URL }}";
 </script>
 <script type="text/javascript" src="{% static "fec_eregs/js/fec.bundle.js" %}"></script>
 {% endblock %}
