--- a/fec_eregs/templates/regulations/base.html
+++ b/fec_eregs/templates/regulations/base.html
@@ -10,5 +10,10 @@ window.API_LOCATION = "{{ FEC_API_URL }}";
 window.CMS_URL = "{{ FEC_CMS_URL }}";
 window.WEB_URL = "{{ FEC_WEB_URL }}";
 </script>
+<script type="text/javascript">
+  (function() {
+    window.regs = {drawer: {forceOpen: true}};
+  })();
+</script>
 <script type="text/javascript" src="{% static "fec_eregs/js/fec.bundle.js" %}"></script>
 {% endblock %}
