--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -331,7 +331,6 @@ html, body, .landing-content, .search-panel {
   }
 }
 
-<<<<<<< Updated upstream
 @media only screen and ( max-width: 719px ) {
   .main-head,
   .reg-header {
@@ -367,6 +366,7 @@ html, body, .landing-content, .search-panel {
       border-top: @mainhead_small_height solid transparent;
       margin-top: -1 * @mainhead_small_height;
   }
+}
 
 // Footer
 .footer-nav {
