--- a/fec_eregs/templates/regulations/generic_universal.html
+++ b/fec_eregs/templates/regulations/generic_universal.html
@@ -14,11 +14,12 @@
           <div class="search-header">Search regulations</div>
           <form action="{{ FEC_WEB_URL }}/legal/search/regulations/" method="GET" role="search">
             <div class="combo--search--mini">
-              <label class="label t-left-aligned" for="search-regs">Terms</label>
+              <label class="label t-left-aligned" for="search-regs">Keywords</label>
               <input id="search-regs" name="search" class="combo__input" type="text" title="Search term"/>
               <input type="hidden" name="search_type" id="version-hidden" title="Search Type" value="regulations"/>
               <button class="combo__button button--search button--standard" type="submit"/>
                 <span class="u-visually-hidden">Search</span></button>
+              <span class="t-note t-sans search__example search__example--with-select">Examples: spending; 9003.6</span>
             </div>
           </form>
         </div>
