--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -10,8 +10,7 @@
   <div class="masthead">
     <a href="{{ FEC_CMS_URL }}/" title="Home" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
     <ul class="utility-nav list--flat">
-      <li class="utility-nav__item is-disabled">(About)</li>
-      <li class="utility-nav__item"><a href="{{ FEC_CMS_URL }}/contact-us/">Contact</a></li>
+      <li class="utility-nav__item is-disabled">About</li>
       <li class="utility-nav__item"><a href="{{ FEC_CMS_URL }}/calendar/">Calendar</a></li>
       <li class="utility-nav__item is-disabled"><span class="js-glossary-toggle glossary__toggle">Glossary</span></li>
     </ul>
@@ -29,10 +28,7 @@
           <a href="{{ FEC_CMS_URL }}/legal-resources/" class="site-nav__link is-parent">Legal resources</a>
         </li>
         <li class="site-nav__item utility-nav__item is-disabled">
-          <a href="#" class="site-nav__link">(About)</a>
-        </li>
-        <li class="site-nav__item utility-nav__item">
-          <a href="{{ FEC_CMS_URL }}/contact-us/" class="site-nav__link">Contact</a>
+          <a href="#" class="site-nav__link">About</a>
         </li>
         <li class="site-nav__item utility-nav__item">
           <a href="{{ FEC_CMS_URL }}/calendar/" class="site-nav__link">Calendar</a>
