--- a/fec_eregs/templates/regulations/generic_universal.html
+++ b/fec_eregs/templates/regulations/generic_universal.html
@@ -11,17 +11,18 @@
 <div class="usa-width-one-fourth search-panel">
     <div class="container">
       <div class="u-padding-left u-padding--right">
-          <div class="search-header">Search regulations</div>
-          <form action="{{ FEC_WEB_URL }}/legal/search/regulations/" method="GET" role="search">
+          <h2 class="search-header">Search regulations</h2>
+          <form action="{{ FEC_WEB_URL }}/legal/search/regulations/" method="GET" role="search" class="group">
             <div class="combo--search--mini">
-              <label class="label t-left-aligned" for="search-regs">Terms</label>
+              <label class="label t-left-aligned" for="search-regs">Keywords</label>
               <input id="search-regs" name="search" class="combo__input" type="text" title="Search term"/>
               <input type="hidden" name="search_type" id="version-hidden" title="Search Type" value="regulations"/>
               <button class="combo__button button--search button--standard" type="submit"/>
                 <span class="u-visually-hidden">Search</span></button>
             </div>
           </form>
-        </div>
+          <p class="t-note t-sans search__example">Examples: spending; 9003.6</p>
+      </div>
     </div>
 </div>
 <div class="usa-width-three-fourths" role="main">
