Various style cleanup

--- a/fec_eregs/static/regulations/css/scss/_typography.scss
+++ b/fec_eregs/static/regulations/css/scss/_typography.scss
@@ -14,7 +14,7 @@ typography.scss contains both global and application specific typography */
 */
 
 body {
-    color: $primary;
+    color: $base;
     font-family: $body_font;
     font-size: 1em;
     /*line-height: 1.625;*/ /* 26px */
