--- a/fec_eregs/static/regulations/css/scss/_variables.scss
+++ b/fec_eregs/static/regulations/css/scss/_variables.scss
@@ -16,7 +16,7 @@ $base-font-family: $serif;
 // Primary colors
 $crimson: #631010;
 $orange: #f77b42;
-$federal-blue: #022c53;
+$federal-blue: #112e51;
 $aqua: #36bdbb;
 
 $base: #212121;
