--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -39,7 +39,7 @@
           </a>
         </li>
         <li class="site-nav__item utility-nav__item u-under-lg-only">
-          <a class="site-nav__link" href="{{ FEC_CMS_URL }}/calendar">Calendar</a>
+          <ahref="{{ FEC_CMS_URL }}/calendar" class="site-nav__link">Calendar</a>
         </li>
       </ul>
     </div>
