Updating disclaimer language

--- a/fec_eregs/templates/regulations/regulation-content.html
+++ b/fec_eregs/templates/regulations/regulation-content.html
@@ -7,17 +7,9 @@
         {%include "regulations/navigation.html"%}
     {% endfor %}
     <div class="slab slab--neutral footer-disclaimer">
-            <p>
-              <small>This site is in beta, which means we're testing content. This content is not finalized,
-              is not legal advice and is subject to change.
-              </small>
-            </p>
-            <p>
-              <small>Everything on this site should be read in conjunction with FEC.gov.
-              Please let us know what you think of our new content; use the feedback tool on the
-              <a href="https://beta.fec.gov/legal-resources/">legal resources</a> landing page.
-              </small>
-            </p>
-    </div>
-{% endif %}
+      <div class="container">
+          <p class="usa-width-one-half">This information is not intended to replace the law or to change its meaning, nor does this information create or confer any rights for or on any person or bind the Federal Election Commission or the public.</p>
+          <p class="usa-width-one-half">The reader is encouraged also to consult the Federal Election Campaign Act of 1971, as amended (52 U.S.C. 30101 et seq.), Commission regulations (Title 11 of the Code of Federal Regulations), Commission advisory opinions and applicable court decisions.</p>
+      </div>
+    </div>{% endif %}
 </section> <!-- /.reg-text -->
