Add site search

--- a/fec_eregs/static/fec_eregs/scss/_components.scss
+++ b/fec_eregs/static/fec_eregs/scss/_components.scss
@@ -64,3 +64,8 @@
   // Font-size from body
   font-size: 14px;
 }
+
+input[type="text"].combo__input {
+  border: 2px solid $gray;
+  text-align: left;
+}
