--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -12,6 +12,24 @@
     <ul class="utility-nav list--flat">
       <li class="utility-nav__item"><a href="{{ FEC_CMS_URL }}/calendar/">Calendar</a></li>
       <li class="utility-nav__item is-disabled"><span class="js-glossary-toggle glossary__toggle">Glossary</span></li>
+      <li class="utility-nav__search">
+        <form accept-charset="UTF-8" action="{{ FEC_CMS_URL }}/search" class="combo" method="get" role="search">
+          <input type="hidden" name="type" value="candidates">
+          <input type="hidden" name="type" value="committees">
+          <input type="hidden" name="type" value="site">
+          <label class="u-visually-hidden" for="query">Search</label>
+          <input
+            class="js-site-search combo__input"
+            autocomplete="off"
+            id="query"
+            name="query"
+            type="text"
+            aria-label="Search FEC.gov">
+          <button type="submit" class="button--standard combo__button button--search">
+            <span class="u-visually-hidden">Search</span>
+          </button>
+        </form>
+      </li>
     </ul>
   </div>
   <nav class="site-nav js-site-nav">
@@ -41,6 +59,24 @@
         <li class="site-nav__item utility-nav__item u-under-lg-only">
           <a href="{{ FEC_CMS_URL }}/calendar" class="site-nav__link">Calendar</a>
         </li>
+        <li class="site-nav__item site-nav__link utility-nav__item u-under-lg-only">
+          <form accept-charset="UTF-8" action="{{ cms_url }}/search" class="combo combo--search--mini" method="get" role="search">
+            <input type="hidden" name="type" value="candidates">
+            <input type="hidden" name="type" value="committees">
+            <input type="hidden" name="type" value="site">
+            <label class="u-visually-hidden" for="mobile-search">Search</label>
+            <input
+              class="js-site-search combo__input"
+              autocomplete="off"
+              id="mobile-search"
+              name="query"
+              type="text"
+              aria-label="Search FEC.gov">
+            <button type="submit" class="button--standard combo__button button--search">
+              <span class="u-visually-hidden">Search</span>
+            </button>
+          </form>
+        </li>        
       </ul>
     </div>
     <button for="nav-toggle" class="js-nav-toggle site-nav__button" aria-controls="site-menu">Menu</button>
