added site-nav__item--secondary to make about section tab red

--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -55,7 +55,7 @@
             <span class="site-nav__link__title">Legal resources</span>
           </a>
         </li>
-        <li class="site-nav__item" data-submenu="about">
+        <li class="site-nav__item--secondary" data-submenu="about">
           <a href="{{ FEC_CMS_URL }}/about" class="site-nav__link">
             <span class="site-nav__link__title">About</span>
           </a>
