--- a/fec_eregs/static/fec_eregs/scss/main.scss
+++ b/fec_eregs/static/fec_eregs/scss/main.scss
@@ -38,6 +38,7 @@ $x-large-screen: 1100px;
 @import 'elements/tables';
 @import 'elements/images';
 
+@import 'components/accordions';
 @import 'components/breadcrumbs';
 @import 'components/buttons';
 @import 'components/cards';
@@ -49,6 +50,7 @@ $x-large-screen: 1100px;
 @import 'components/page-headers';
 @import 'components/search-bar';
 @import 'components/site-header';
+@import 'components/type-styles';
 
 @import 'custom-headings';
 @import 'custom-mega-menu';
