--- a/fec_eregs/templates/regulations/main-header.html
+++ b/fec_eregs/templates/regulations/main-header.html
@@ -10,7 +10,7 @@
     <a href="{{ FEC_CMS_URL }}/" title="Home" class="site-title"><span class="u-visually-hidden">Federal Election Commission | United States of America</span></a>
     <ul class="utility-nav list--flat">
       <li class="utility-nav__item"><a href="{{ FEC_CMS_URL }}/calendar/">Calendar</a></li>
-      <li class="utility-nav__item is-disabled"><span class="js-glossary-toggle glossary__toggle">Glossary</span></li>
+      <li class="utility-nav__item"><a class="js-glossary-toggle glossary__toggle">Glossary</a></li>
       <li class="utility-nav__search">
         <form accept-charset="UTF-8" action="{{ FEC_CMS_URL }}/search" class="combo" method="get" role="search">
           <input type="hidden" name="type" value="candidates">
@@ -55,6 +55,12 @@
             <span class="site-nav__link__title">Legal resources</span>
           </a>
         </li>
+        <li class="site-nav__item--secondary" data-submenu="about">
+          <a href="{{ FEC_CMS_URL }}/about" class="site-nav__link">
+            <span class="site-nav__link__title">About</span>
+          </a>
+        </li>
+
         <li class="site-nav__item utility-nav__item u-under-lg-only">
           <a href="{{ FEC_CMS_URL }}/calendar" class="site-nav__link">Calendar</a>
         </li>
@@ -105,4 +111,5 @@
       {% endif %}
     </ul>
   </div>
+  {% include 'regulations/glossary.html' %}
 </div>
